--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-material-fileupload": "0.0.11",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "primeng": "^5.2.4",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.25"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.3",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.104",
     "angular-ide": "^0.9.39",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
