--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "angular-material-fileupload": "0.0.11",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
+    "delete": "^1.1.0",
+    "dependency-check": "^3.1.0",
     "font-awesome": "^4.7.0",
+    "ng2-charts": "^1.6.0",
+    "ng2-json-editor": "^0.24.5",
     "primeng": "^5.2.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.25"
