--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,7 +4,9 @@
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "module": "es2015",
-    "types": []
+    "types": [],
+    "experimentalDecorators" : true,
+    //"experimentalDecorators": true,
   },
   "exclude": [
     "test.ts",
