No more corporate cr

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,3 @@
-file.reference.POC_Angular2-IsbanASM=.
+file.reference.POC_Angular2-kiuwanASM=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.POC_Angular2-IsbanASM}
+site.root.folder=${file.reference.POC_Angular2-kiuwanASM}
