--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "isban-asm",
+  "name": "kiuwan-asm",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -17,6 +17,7 @@
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
+    "@angular/flex-layout": "^5.0.0-beta.14",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
     "@angular/material": "^5.2.4",
